# TodoistAutomation

./: README.md  mypy.ini  requirements.txt  setup.cfg  todoist.py
.github/workflows/: black.yml  python-tests.yml
autodoist/: cli.py  models.py
autodoist/github/: markdown.py
autodoist/gtd/: data_loader.py  gtd_state.py
autodoist/todoist/: api_wrapper.py  sync_manager.py
chatgpt-logs/: GTDContextLabel.md  create_filter_add_request.md  gtd-contexts-data.md  list-comprehension.md  send_todoist_sync_request.md
src/gtd/: api_wrapper.py  gtd_state.py  models.py  todoist_sync_manager
tests/: test_api_wrapper.py  test_app.py  test_gtd_state.py  test_load_gtd_state.py  test_markdown.py  test_models.py  test_sync_manager.py
