[metadata]
name = todoist-automation
version = 0.0
author = Gordon Bailey
author_email = grodtron@github.com
description = A simple tool to generate Todoist primitives for GTD implementation.
license = MIT
url = https://github.com/grodtron/TodoistAutomation

[options]
packages = find:
install_requires =
    dataclasses
    dataclasses-json
    requests
    types-requests
    mypy
    parameterized
    PyYAML
    types-PyYAML
    PyGithub

[options.entry_points]
console_scripts =
    todoist-sync = autodoist.cli:main
